[package]
name = "rx"
version = "0.0.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/cranelift-jit-demo"
description = "Toy language implemented using cranelift-jit"
edition = "2018"

[[bin]]
name = "lang"
path = "src/bin/lang.rs"

[lib]
name = "rx"
path = "src/lib.rs"

[dependencies]
peg = "0.8.2"
cranelift = "0.105.1"
cranelift-module = "0.105.1"
cranelift-jit = "0.105.1"
cranelift-native = "0.105.1"
num-traits = "0.2.18"
num-derive = "0.4.2"
anyhow = { version = "1.0.80", features = ["backtrace"] }
itertools = "0.12.1"
codespan-reporting = "0.11.1"
indexmap = { version = "2.2.3", features = ["arbitrary"] }
cranelift-codegen = { version = "0.105.1", features = ["anyhow", "souper-ir", "trace-log", "sha2", "incremental-cache", "bincode", "souper-harvest", "disas"] }
cranelift-frontend = { version = "0.105.1", features = ["hashbrown", "core"] }
cranelift-bforest = "0.105.1"
cranelift-codegen-shared = "0.105.1"
target-lexicon = { version = "0.12.14", features = ["std"] }
cranelift-control = "0.105.1"
derive_more = { version = "0.99.17", features = ["peg", "generate-parsing-rs", "track-caller"] }
